Use the new func registry for the subscript functions.